@@ -1,3 +1,4 @@
+	* increase max allowed outstanding piece requests from peers
 	* uTP performance improvement. only fast retransmit one packet at a time
 	* improve error message for 'file too short'
 	* fix piece-picker stat bug when only selecting some files for download
